exp/toy.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | Specifier FuncDec SEMI
    7       | error SEMI

    8 Specifier: TYPE

    9 ExtDecList: Dec
   10           | Dec COMMA ExtDecList

   11 VarDec: ID

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmList RC

   18 StmList: %empty
   19        | Stmt StmList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt

   26 DefList: %empty
   27        | Def DefList

   28 Def: Specifier DecList SEMI

   29 DecList: Dec
   30        | Dec COMMA DecList

   31 Dec: VarDec
   32    | VarDec ASSIGNOP Exp

   33 Exp: Exp ASSIGNOP Exp
   34    | Exp PLUSASS Exp
   35    | Exp MINUSASS Exp
   36    | Exp STARASS Exp
   37    | Exp DIVASS Exp
   38    | PLUSPLUS Exp
   39    | MINUSMINUS Exp
   40    | Exp PLUSPLUS
   41    | Exp MINUSMINUS
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | ID
   55    | INT
   56    | FLOAT
   57    | CHAR

   58 Args: Exp COMMA Args
   59     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7
INT (258) 55
ID (259) 11 12 13 52 53 54
RELOP (260) 44
TYPE (261) 8
FLOAT (262) 56
CHAR (263) 57
LP (264) 12 13 23 24 25 49 52 53
RP (265) 12 13 23 24 25 49 52 53
LC (266) 17
RC (267) 17
SEMI (268) 4 6 7 20 22 28
COMMA (269) 10 15 30 58
PLUS (270) 45
MINUS (271) 46 50
STAR (272) 47
DIV (273) 48
ASSIGNOP (274) 32 33
AND (275) 42
OR (276) 43
NOT (277) 51
IF (278) 23 24
ELSE (279) 24
WHILE (280) 25
RETURN (281) 22
PLUSASS (282) 34
MINUSASS (283) 35
STARASS (284) 36
DIVASS (285) 37
PLUSPLUS (286) 38 40
MINUSMINUS (287) 39 41
UMINUS (288)
UPLUSPLUS (289)
UMINUSMINUS (290)
LOWER_THEN_ELSE (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
ExtDefList (39)
    on left: 2 3, on right: 1 3
ExtDef (40)
    on left: 4 5 6 7, on right: 3
Specifier (41)
    on left: 8, on right: 4 5 6 16 28
ExtDecList (42)
    on left: 9 10, on right: 4 10
VarDec (43)
    on left: 11, on right: 16 31 32
FuncDec (44)
    on left: 12 13, on right: 5 6
VarList (45)
    on left: 14 15, on right: 12 15
ParamDec (46)
    on left: 16, on right: 14 15
CompSt (47)
    on left: 17, on right: 5 21
StmList (48)
    on left: 18 19, on right: 17 19
Stmt (49)
    on left: 20 21 22 23 24 25, on right: 19 23 24 25
DefList (50)
    on left: 26 27, on right: 17 27
Def (51)
    on left: 28, on right: 27
DecList (52)
    on left: 29 30, on right: 28 30
Dec (53)
    on left: 31 32, on right: 9 10 29 30
Exp (54)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57, on right: 20 22 23 24 25 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47 48 49 50 51 58 59
Args (55)
    on left: 58 59, on right: 52 58


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


State 2

    8 Specifier: TYPE .

    $default  reduce using rule 8 (Specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt
    6       | Specifier . FuncDec SEMI

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13
    Dec         go to state 14


State 7

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 10

   11 VarDec: ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 15

    $default  reduce using rule 11 (VarDec)


State 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 16


State 12

   31 Dec: VarDec .
   32    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 17

    $default  reduce using rule 31 (Dec)


State 13

    5 ExtDef: Specifier FuncDec . CompSt
    6       | Specifier FuncDec . SEMI

    LC    shift, and go to state 18
    SEMI  shift, and go to state 19

    CompSt  go to state 20


State 14

    9 ExtDecList: Dec .
   10           | Dec . COMMA ExtDecList

    COMMA  shift, and go to state 21

    $default  reduce using rule 9 (ExtDecList)


State 15

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 22

    Specifier  go to state 23
    VarList    go to state 24
    ParamDec   go to state 25


State 16

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 17

   32 Dec: VarDec ASSIGNOP . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 35


State 18

   17 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 26 (DefList)

    Specifier  go to state 36
    DefList    go to state 37
    Def        go to state 38


State 19

    6 ExtDef: Specifier FuncDec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 20

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 21

   10 ExtDecList: Dec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 12
    Dec         go to state 14


State 22

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


State 23

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 41


State 24

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 42


State 25

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 43

    $default  reduce using rule 14 (VarList)


State 26

   55 Exp: INT .

    $default  reduce using rule 55 (Exp)


State 27

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   54    | ID .

    LP  shift, and go to state 44

    $default  reduce using rule 54 (Exp)


State 28

   56 Exp: FLOAT .

    $default  reduce using rule 56 (Exp)


State 29

   57 Exp: CHAR .

    $default  reduce using rule 57 (Exp)


State 30

   49 Exp: LP . Exp RP

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 45


State 31

   50 Exp: MINUS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 46


State 32

   51 Exp: NOT . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 47


State 33

   38 Exp: PLUSPLUS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 48


State 34

   39 Exp: MINUSMINUS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 49


State 35

   32 Dec: VarDec ASSIGNOP Exp .
   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . PLUSASS Exp
   35    | Exp . MINUSASS Exp
   36    | Exp . STARASS Exp
   37    | Exp . DIVASS Exp
   40    | Exp . PLUSPLUS
   41    | Exp . MINUSMINUS
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp

    RELOP       shift, and go to state 50
    PLUS        shift, and go to state 51
    MINUS       shift, and go to state 52
    STAR        shift, and go to state 53
    DIV         shift, and go to state 54
    ASSIGNOP    shift, and go to state 55
    AND         shift, and go to state 56
    OR          shift, and go to state 57
    PLUSASS     shift, and go to state 58
    MINUSASS    shift, and go to state 59
    STARASS     shift, and go to state 60
    DIVASS      shift, and go to state 61
    PLUSPLUS    shift, and go to state 62
    MINUSMINUS  shift, and go to state 63

    $default  reduce using rule 32 (Dec)


State 36

   28 Def: Specifier . DecList SEMI

    ID  shift, and go to state 39

    VarDec   go to state 12
    DecList  go to state 64
    Dec      go to state 65


State 37

   17 CompSt: LC DefList . StmList RC

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    LC          shift, and go to state 18
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    IF          shift, and go to state 66
    WHILE       shift, and go to state 67
    RETURN      shift, and go to state 68
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    $default  reduce using rule 18 (StmList)

    CompSt   go to state 69
    StmList  go to state 70
    Stmt     go to state 71
    Exp      go to state 72


State 38

   27 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 26 (DefList)

    Specifier  go to state 36
    DefList    go to state 73
    Def        go to state 38


State 39

   11 VarDec: ID .

    $default  reduce using rule 11 (VarDec)


State 40

   10 ExtDecList: Dec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 41

   16 ParamDec: Specifier VarDec .

    $default  reduce using rule 16 (ParamDec)


State 42

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


State 43

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 23
    VarList    go to state 74
    ParamDec   go to state 25


State 44

   52 Exp: ID LP . Args RP
   53    | ID LP . RP

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    RP          shift, and go to state 75
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp   go to state 76
    Args  go to state 77


State 45

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . PLUSASS Exp
   35    | Exp . MINUSASS Exp
   36    | Exp . STARASS Exp
   37    | Exp . DIVASS Exp
   40    | Exp . PLUSPLUS
   41    | Exp . MINUSMINUS
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   49    | LP Exp . RP

    RELOP       shift, and go to state 50
    RP          shift, and go to state 78
    PLUS        shift, and go to state 51
    MINUS       shift, and go to state 52
    STAR        shift, and go to state 53
    DIV         shift, and go to state 54
    ASSIGNOP    shift, and go to state 55
    AND         shift, and go to state 56
    OR          shift, and go to state 57
    PLUSASS     shift, and go to state 58
    MINUSASS    shift, and go to state 59
    STARASS     shift, and go to state 60
    DIVASS      shift, and go to state 61
    PLUSPLUS    shift, and go to state 62
    MINUSMINUS  shift, and go to state 63


State 46

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . PLUSASS Exp
   35    | Exp . MINUSASS Exp
   36    | Exp . STARASS Exp
   37    | Exp . DIVASS Exp
   40    | Exp . PLUSPLUS
   41    | Exp . MINUSMINUS
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   50    | MINUS Exp .

    PLUSPLUS    shift, and go to state 62
    MINUSMINUS  shift, and go to state 63

    $default  reduce using rule 50 (Exp)


State 47

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . PLUSASS Exp
   35    | Exp . MINUSASS Exp
   36    | Exp . STARASS Exp
   37    | Exp . DIVASS Exp
   40    | Exp . PLUSPLUS
   41    | Exp . MINUSMINUS
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   51    | NOT Exp .

    PLUSPLUS    shift, and go to state 62
    MINUSMINUS  shift, and go to state 63

    $default  reduce using rule 51 (Exp)


State 48

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . PLUSASS Exp
   35    | Exp . MINUSASS Exp
   36    | Exp . STARASS Exp
   37    | Exp . DIVASS Exp
   38    | PLUSPLUS Exp .
   40    | Exp . PLUSPLUS
   41    | Exp . MINUSMINUS
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp

    PLUSPLUS    shift, and go to state 62
    MINUSMINUS  shift, and go to state 63

    $default  reduce using rule 38 (Exp)


State 49

   33 Exp: Exp . ASSIGNOP Exp
   34    | Exp . PLUSASS Exp
   35    | Exp . MINUSASS Exp
   36    | Exp . STARASS Exp
   37    | Exp . DIVASS Exp
   39    | MINUSMINUS Exp .
   40    | Exp . PLUSPLUS
   41    | Exp . MINUSMINUS
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp

    PLUSPLUS    shift, and go to state 62
    MINUSMINUS  shift, and go to state 63

    $default  reduce using rule 39 (Exp)


State 50

   44 Exp: Exp RELOP . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 79


State 51

   45 Exp: Exp PLUS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 80


State 52

   46 Exp: Exp MINUS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 81


State 53

   47 Exp: Exp STAR . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 82


State 54

   48 Exp: Exp DIV . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 83


State 55

   33 Exp: Exp ASSIGNOP . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 84


State 56

   42 Exp: Exp AND . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 85


State 57

   43 Exp: Exp OR . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 86


State 58

   34 Exp: Exp PLUSASS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 87


State 59

   35 Exp: Exp MINUSASS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 88


State 60

   36 Exp: Exp STARASS . Exp

    INT         shift, and go to state 26
    ID          shift, and go to state 27
    FLOAT       shift, and go to state 28
    CHAR        shift, and go to state 29
    LP          shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUSPLUS    shift, and go to state 33
    MINUSMINUS  shift, and go to state 34

    Exp  go to state 89


State 61

   37 Exp: Exp DIVASS . Exp
